# dualnum

./: .buildinfo  .gitignore  Cargo.toml  README.md  api.html  examples.html  genindex.html  index.html  license-apache  objects.inv  requirements.txt  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  examples.doctree  index.doctree
.github/workflows/: deploy.yml  documentation.yml  python.yml  release.yml  rust.yml  wheels.yml
_sources/: index.rst.txt
docs/: api.rst  conf.py  examples.rst  index.rst
dualnum/: __init__.py
examples/: IdealGas.ipynb
hyperdual/: __init__.py
src/: dual.rs  dual2.rs  dual3.rs  hd2.rs  hd3.rs  hyperdual.rs  lib.rs  macros.rs  special_functions.rs
