[package]
name = "dualnum"
version = "0.1.0"
authors = ["Gernot Bauer <bauer@itt.uni-stuttgart.de>",
           "Philipp Rehner <rehner@itt.uni-stuttgart.de>"]
edition = "2018"

[lib]
name = "dualnum"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-dual = "0.1"

[dependencies.pyo3]
version = "0.13"
features = ["extension-module", "abi3", "abi3-py36"]
